# EMOO

./: .gitignore  .gitmodules  CMakeLists.txt  GraphicsExternal.lua  LICENSE  README.md  TODO.md  dependencies.cmake  dependencies.lua  makeProject.bat  makeProject.sh  makesln.bat  premake5.lua  setupVulkan.lua
Application/: .gitignore  CMakeLists.txt  make_ex_file.py  premake5.lua  test.txt
Application/assets/fonts/: fa-solid-900.embed
Application/resources/: resource.rc
Application/resources/texts/: explanations.txf
Application/scripts/: make_ex_file.py
Application/src/: Application.cpp  Application.hpp  main.cpp
Application/src/Components/: CloseDialog.cpp  CloseDialog.hpp  IComponent.cpp  IComponent.hpp  MemoryView.cpp  MemoryView.hpp  ShowCpuStatus.cpp  ShowCpuStatus.hpp  ShowPPUStatus.cpp  ShowPPUStatus.hpp
Application/src/ImGui/: ImGuiBuild.cpp
FileManager/: CMakeLists.txt  premake5.lua
FileManager/include/FileManager/: FileManager.hpp  OpenMode.hpp  Serializable.hpp
FileManager/src/: FileManagerImpl.cpp
FileManager/src/internal/: FileManager_internal.cpp
Graphics/: .gitignore  dependencies.lua  imgui.ini  premake5.lua  setupVulkan.lua
Graphics/Shader/: Shader.vert  colored_triangle.vert  compile.bat  gradient.comp  gradient_color.comp  input_structures.glsl  mesh.frag  mesh.vert  sky.comp  tex_image.frag
Graphics/Shader/embed/: frag_shader.embed  tex_image.frag.spv.embed  vert_shader.embed
Graphics/assets/: resource.rc
Graphics/src/: Application.cpp  Application.hpp  Core.hpp  Graphics.hpp  Renderer.cpp  Renderer.hpp  main.cpp
Graphics/src/Components/: CloseDialog.cpp  CloseDialog.hpp  IComponent.cpp  IComponent.hpp  MemoryView.cpp  MemoryView.hpp  ShowCpuStatus.cpp  ShowCpuStatus.hpp  ShowPPUStatus.cpp  ShowPPUStatus.hpp
Graphics/src/ImGui/: CascadiaMono-Regular.embed  ImGuiBuild.cpp  OpenSans.embed
Graphics/src/Input/: Input.cpp  Input.hpp
Graphics/src/Renderer/: DebugMessengerUtils.cpp  Engine.cpp  Engine.hpp  Primitives.hpp  RendererAPI.hpp  Sprite.cpp  Sprite.hpp  Texture.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
Graphics/src/UUID/: UUID.cpp  UUID.hpp
Graphics/src/Util/: lud_assert.hpp
Graphics/src/Window/: SDL.cpp  SDL.hpp  Window.cpp  Window.hpp
Input/: CMakeLists.txt  premake5.lua
Input/include/Input/: Input.hpp
Input/src/: Input.cpp  Input.hpp
Input/src/SDL/: SDLInput.cpp  SDLInput.hpp
Input/src/SDL2/: SDL2Input.cpp
NesEmu/: CMakeLists.txt  premake5.lua
NesEmu/src/: Console.cpp  Console.hpp  NesEmu.hpp  main.cpp  pch.hpp
NesEmu/src/internals/: APU.cpp  APU.hpp  Bus.cpp  Bus.hpp  CPU.cpp  CPU.hpp  Cartridge.cpp  Cartridge.hpp  Core.hpp  InputDevice.cpp  InputDevice.hpp  PPU.cpp  PPU.hpp
NesEmu/src/internals/mappers/: MMC1.cpp  MMC1.hpp  Mapper.cpp  Mapper.hpp  MapperAlias.hpp  NROM.cpp  NROM.hpp
NesEmu/src/internals/palettes/: Default.hpp
NesEmu/src/utils/: A6502Core.cpp  A6502Core.hpp  Assembler.cpp  Assembler.hpp  Disassembler.cpp  Disassembler.hpp  ToyAssembler.hpp  ToyAssembler.lua  Unreachable.hpp
NesEmu/test/: ArithmeticTest.cpp  BranchTest.cpp  IncrementDecrementTest.cpp  JumpCallTest.cpp  LoadStoreTest.cpp  LogicTest.cpp  RegTransferTest.cpp  ShiftTest.cpp  StackTest.cpp  StatusFlagChangeTests.cpp  SystemFunctionTest.cpp  TestConfig.hpp  blank.nes  main.cpp  premake5.lua
NesEmu/test/CPU/: ArithmeticTest.cpp  BranchTest.cpp  IncrementDecrementTest.cpp  JumpCallTest.cpp  LoadStoreTest.cpp  LogicTest.cpp  RegTransferTest.cpp  ShiftTest.cpp  StackTest.cpp  StatusFlagChangeTests.cpp  SystemFunctionTest.cpp
NesEmu/test/PPU/: ScrollTest.cpp
NesEmu/test/src/: TestConfig.hpp  main.cpp
NesEmu/test/src/CPU/: ArithmeticTest.cpp  BranchTest.cpp  DissasemblerTest.cpp  IncrementDecrementTest.cpp  JumpCallTest.cpp  LoadStoreTest.cpp  LogicTest.cpp  NesTest.cpp  RegTransferTest.cpp  ShiftTest.cpp  StackTest.cpp  StatusFlagChangeTests.cpp  SystemFunctionTest.cpp
NesEmu/test/src/PPU/: MMIO.cpp  ScrollTest.cpp
NesEmu/test/src/Rom/: Blank.hpp  nestest.hpp
NesEmu/test/src/State/: save.cpp
Renderer/: .gitignore  CMakeLists.txt  premake5.lua
Renderer/Fonts/: OpenSans-Regular.embed
Renderer/Shader/: mesh.frag  mesh.vert
Renderer/Shader/SPIRV/: mesh.frag.spv  mesh.vert.spv
Renderer/Shader/embed/: mesh.frag.cpp  mesh.vert.cpp
Renderer/src/: RendererAPI.hpp  Sprite.cpp  Texture.cpp  Texture.hpp
Renderer/src/Vulkan/: BatchRenderer.cpp  BatchRenderer.hpp  Core.hpp  Engine.cpp  Engine.hpp  RendererAPIVulkanImpl.cpp  VulkanTexture.cpp  VulkanTexture.hpp
TFG/: premake5.lua
TFG/src/: main.cpp  pch.hpp
TFG/src/internals/: APU.cpp  Bus.cpp  Bus.hpp  CPU.cpp  CPU.hpp  Core.hpp  PPU.cpp
Window/: premake5.lua
Window/include/Window/: Window.hpp
Window/src/: Window.cpp
Window/src/SDL2/: SDL2Window.cpp  SDL3Window.cpp
assembler/: assembler.lua
bin-int/Debug-windows-x86_64/Graphics/: Graphics.exe.recipe  vc143.idb
bin-int/Debug-windows-x86_64/Premake/: Premake.recipe
bin-int/Release-windows-x86_64/Graphics/: Graphics.exe.recipe
cmake/: dependencies.cmake
doc/: Class_diagram.vsdx  PlantillaTFGEII.Desarrollo1.95ESP.docx  WBS.vsdx  sources.txt
libraries/Input/: CMakeLists.txt
libraries/Input/include/Input/: Input.hpp
libraries/Input/include/Input/SDL2/: SDL2Input.hpp
libraries/Input/include/Input/SDL3/: SDL3Input.hpp
libraries/Input/src/: Input.cpp
libraries/Input/src/SDL3/: SDL3Input.cpp
libraries/NesEmu/: .gitignore
libraries/NesEmu/src/: Console.cpp  NesEmu.hpp
libraries/Renderer/: CMakeLists.txt
libraries/Renderer/Shader/: mesh.frag  mesh.vert
libraries/Renderer/scripts/: spv_to_embed.py
libraries/Renderer/src/: Primitives.hpp  Sprite.hpp
libraries/Renderer/src/Vulkan/: BatchRenderer.cpp  BatchRenderer.hpp  Engine.cpp  VulkanTexture.hpp
libraries/Renderer/src/Vulkan/vkutil/: Descriptors.hpp  Images.hpp  Initializers.hpp  Pipelines.hpp
test/: premake5.lua
test/src/: main.cpp
tests/: premake5.lua
tests/src/: main.cpp
utility/: spv_to_embed.py
utility/compile_shader_to_embed/: premake5.lua
utilty/: spv_to_embed.py
(+118 files in other folders)
